test/fail/testReturn.yak
PROGRAMME testReturn

ENTIER FONCTION test (ENTIER n)
  SI n<=1 ALORS RETOURNE 1
  SINON RETOURNE VRAI
  FSI
FFONCTION

PRINCIPAL
VAR ENTIER i;
  i=test(5);
  ECRIRE(i);
FPRINCIPAL

FPROGRAMME
